--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev:css": "tailwindcss -i ./src/index.css -o ./src/styles/tailwind.css --watch",
+    "build:css": "tailwindcss -i ./src/index.css -o ./src/styles/tailwind.css --minify"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +49,21 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17"
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dineshingale/GaganYatri.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dineshingale/GaganYatri/issues"
+  },
+  "homepage": "https://github.com/dineshingale/GaganYatri#readme"
 }
-
